--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -12,32 +12,30 @@
             <li class="active">
               <a data-toggle="pill" href="/#/dashboard" ng-click="closeFilter()">
                 <i class="fa fa-th-large my-verti-icon"></i>
-
-                Dashboard</a></li>
+                <span class="sidebar-heading">Dashboard</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/my-catalogue">
-              <i class="fa fa-heart my-verti-icon"></i>
-              My Catalog</a></li>
+              <i class="fa fa-heart my-verti-icon" style="color:#666666;"></i>
+              <span class="sidebar-heading">My Catalog</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/manage/jobsites">
               <i class="fa fa-map-marker my-verti-icon"></i>
-              Manage Job Sites</a></li>
+              <span class="sidebar-heading">Manage Job Sites</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/manage-my-account">
               <i class="fa fa-user my-verti-icon"></i>
-              Manage My Account</a></li>
+              <span class="sidebar-heading">Manage My Account</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations">
-              <i class="fa fa-bookmark-o my-verti-icon"></i>
-              Quotes &amp;
-              Reservations</a></li>
+              <i class="fa fa-bookmark my-verti-icon"></i>
+              <span class="sidebar-heading">Quotes &amp;
+              Reservations</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations">
               <i class="fa fa-usd my-verti-icon"></i>
-              Make a Payment</a></li>
+              <span class="sidebar-heading">Make a Payment</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/invoices">
               <i class="fa fa-file my-verti-icon"></i>
-
-              View Invoices</a></li>
-            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations"><i class="fa fa-comments"></i>
-              Requests</a></li>
-            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations"><i class="fa fa-briefcase"></i>
-              View Contracts</a></li>
+              <span class="sidebar-heading">View Invoices</span></a></li>
+            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations"><i class="fa fa-comments my-verti-icon"></i>
+              <span class="sidebar-heading">Requests</span></a></li>
+            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations"><i class="fa fa-briefcase my-verti-icon"></i>
+              <span class="sidebar-heading">View Contracts</span></a></li>
 
           </ul>
 
