--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -351,7 +351,7 @@ a:focus { color: #0099cc;
 .my-verti-tab > li > a{padding: 20px 15px; color: #666666; border-bottom: dashed 1px #000; border-radius: inherit;}
 .my-verti-tab > li.active > a, .my-verti-tab > li.active > a:focus, .my-verti-tab > li.active > a:hover{
     background-color: #fff; color: #009ddc; border-left: solid 8px #009ddc;}
-.my-verti-icon{margin: 0 10px 0 0;}
+.my-verti-icon{margin: 3px 0 0 0; position: absolute;}
 .my-bottm-line{ line-height: 40px;}
 .job-ste-box{margin:15px 0; padding: 0;}
 .job-ste-box ul{}
@@ -1074,5 +1074,17 @@ a:focus { color: #0099cc;
 
 .remem-me {
   font-size: 13px;
+}
+
+.sidebar-heading {
+  margin: 0 0 0 25px;
+}
+
+a:hover {
+  transition: all 0.6s ease 0s;
+}
+
+button:hover {
+  transition: all 0.6s ease 0s;
 }
 
