--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -58,14 +58,83 @@
                 <a href="#/add-job" class="btn pull-left manage-job-btn add-job-site-btn">Add Job Site</a>
                 <!-- <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn">List View</button>
                 <button class="btn pull-right manage-job-btn map map-view-btn">Map View</button> -->
-                <button class="btn btn-default pull-right manage-job-btn deactivate list" ng-class="{'active' : flags.listView}" ng-click="toggleListView(true)">List View</button>
-                <button class="btn btn-default pull-right manage-job-btn deactivate map" ng-click="toggleListView(false)" ng-class="{'active' : !flags.listView}">Map View</button>
+                <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn" ng-class="{'active' : flags.listView}" ng-click="toggleListView(true)">List View</button>
+                <button class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn" ng-click="toggleListView(false)" ng-class="{'active' : !flags.listView}">Map View</button>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box" ng-if="!flags.listView">
                 <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="flags.listView">
-                
+                <ul class="list-view-ul">
+                  <li class="list-view-li"><h4>1</h4></li>
+                  <li class="list-desc">
+                    <h4>Hello world</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </li>
+                  <li class="list-view-li list-view-desc"><h4>Hello</h4></li>
+                  <li class="list-view-li list-view-desc"><h4>World</h4></li>
+                </ul>
+                <ul class="list-view-ul">
+                  <li class="list-view-li"><h4>2</h4></li>
+                  <li class="list-desc">
+                    <h4>Hello world</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </li>
+                  <li class="list-view-li list-view-desc"><h4>Hello</h4></li>
+                  <li class="list-view-li list-view-desc"><h4>World</h4></li>
+                </ul>
+                <ul class="list-view-ul">
+                  <li class="list-view-li"><h4>3</h4></li>
+                  <li class="list-desc">
+                    <h4>Hello world</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </li>
+                  <li class="list-view-li list-view-desc"><h4>Hello</h4></li>
+                  <li class="list-view-li list-view-desc"><h4>World</h4></li>
+                </ul>
+                <ul class="list-view-ul">
+                  <li class="list-view-li"><h4>4</h4></li>
+                  <li class="list-desc">
+                    <h4>Hello world</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </li>
+                  <li class="list-view-li list-view-desc"><h4>Hello</h4></li>
+                  <li class="list-view-li list-view-desc"><h4>World</h4></li>
+                </ul>
+                <ul class="list-view-ul">
+                  <li class="list-view-li"><h4>5</h4></li>
+                  <li class="list-desc">
+                    <h4>Hello world</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </li>
+                  <li class="list-view-li list-view-desc"><h4>Hello</h4></li>
+                  <li class="list-view-li list-view-desc"><h4>World</h4></li>
+                </ul>
+                <ul class="list-view-ul">
+                  <li class="list-view-li"><h4>6</h4></li>
+                  <li class="list-desc">
+                    <h4>Hello world</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </li>
+                  <li class="list-view-li list-view-desc"><h4>Hello</h4></li>
+                  <li class="list-view-li list-view-desc"><h4>World</h4></li>
+                </ul>
+                <ul class="list-view-ul">
+                  <li class="list-view-li"><h4>7</h4></li>
+                  <li class="list-desc">
+                    <h4>Hello world</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </li>
+                  <li class="list-view-li list-view-desc"><h4>Hello</h4></li>
+                  <li class="list-view-li list-view-desc"><h4>World</h4></li>
+                </ul>
               </div>
             </div>
           </div>
