login ui responsive

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -10,7 +10,7 @@
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
             <img src="/assets/images/rent.png" alt="">
           </div>
-          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8 rent-sale-soft">
             <h6 class="rent_title">Equipment Rental</h6>
 
             <p class="rent_subtit">Mention something related to this title here mention something here.</p>
@@ -20,7 +20,7 @@
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
             <img src="/assets/images/sale.png" alt="">
           </div>
-          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8 rent-sale-soft">
             <h6 class="rent_title">Equipment Sales</h6>
 
             <p class="rent_subtit">Mention something related to this title here mention something here.</p>
@@ -30,7 +30,7 @@
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 ">
             <img src="/assets/images/soft.png" alt="">
           </div>
-          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8 rent-sale-soft">
             <h6 class="rent_title">Software</h6>
 
             <p class="rent_subtit">Mention something related to this title here mention something here.</p>
@@ -38,9 +38,9 @@
         </div>
       </div>
       <!-- START  LOGIN/REGISTER TAB -->
-      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page">
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page reg-success">
         <div ng-show="flags.registration.initiated" class="panel panel-default success-panel">
-          <div class="panel-body">
+          <div class="panel-body reg-success">
           <div ng-show="flags.registration.success">
             <div class="panel panel-success">
               <div class="panel-heading">
