--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -61,9 +61,12 @@
                 <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn" ng-class="{'active' : flags.listView}" ng-click="toggleListView(true)">List View</button>
                 <button class="btn btn-default pull-right manage-job-btn deactivate map map-view-btn" ng-click="toggleListView(false)" ng-class="{'active' : !flags.listView}">Map View</button>
               </div>
+              <!-- map view start -->
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box" ng-if="!flags.listView">
                 <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
               </div>
+              <!-- map view end -->
+              <!-- list view start -->
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="flags.listView">
                 <ul class="list-view-ul">
                   <li class="list-view-li"><h4>1</h4></li>
@@ -136,6 +139,7 @@
                   <li class="list-view-li list-view-desc"><h4>World</h4></li>
                 </ul>
               </div>
+              <!-- list view end -->
             </div>
           </div>
         </div>
