landing page header fixed on mobile

--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -1,9 +1,9 @@
 <header class="main_bg">
-  <div class="container">
+  <div class="container landing-container">
     <nav class="navbar">
       <div class="container nopadding">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header landing-navbar-header">
           <button type="button" class="navbar-toggle collapsed landing-header" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="true" style="margin-top: 0;">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -14,12 +14,12 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse collapse-for-small" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse collapse-for-small landing-collapse-small" id="bs-example-navbar-collapse-1">
           <div class="nav navbar-nav landing-header">
             <div class="equipments-div left-link-div">
               <span class="glyphicon glyphicon-align-justify"></span>
               <div class="cd-dropdown-wrapper">
-                    <a class="cd-dropdown-trigger eqe_tex" menu-aim-dir href="#0">Equipments</a>
+                    <a class="cd-dropdown-trigger eqe_tex cd-dropdown-trigger-small" menu-aim-dir href="#0">Equipments</a>
                     <nav class="cd-dropdown">
                       <h2>Title</h2>
                       <a href="#0" class="cd-close">Close</a>
@@ -270,11 +270,11 @@
             </div>
             <div class="req-call-div left-link-div">
               <span class="glyphicon glyphicon-earphone"></span>
-              <span class="req_call" style="margin: 0;"><a href="/#/request-callback">  Request Callback</a></span>
+              <span class="req_call req_call-small" style="margin: 0;"><a href="/#/request-callback">  Request Callback</a></span>
             </div>
             <div class="sign-in-div left-link-div">
               <span class="glyphicon glyphicon-log-in"></span>
-              <span class="req_call"><a href="/#/login">  Sign In</a></span>
+              <span class="req_call req_call-small"><a href="/#/login">  Sign In</a></span>
             </div>
           </div>
           <div class="nav navbar-nav navbar-right landing-header">
